1,提供lambda测试用例