@@ -12,9 +12,127 @@
     <artifactId>leyden-simple</artifactId>
 
     <properties>
+        <java.version>22</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <main.class>io.github.dreamlike.Main</main.class>
     </properties>
+    <profiles>
+        <profile>
+            <id>native-release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>0.9.28</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>compile-no-fork</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <buildArgs>
+                                <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
+                                <buildArg>--no-fallback</buildArg>
+                                <buildArg>--enable-preview</buildArg>
+                                <buildArg>-O3</buildArg>
+                                <buildArg>--gc=G1</buildArg>
+                                <buildArg>-march=native</buildArg>
+                                <buildArg>--initialize-at-build-time=DynamicEntryLeydenCaseTestCase,io.github.dreamlike</buildArg>
+                            </buildArgs>
+                            <skipNativeTests>true</skipNativeTests>
+                            <mainClass>${main.class}</mainClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>native-debug</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>0.9.28</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>compile-no-fork</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <buildArgs>
+                                <buildArg>--pgo-instrument</buildArg>
+                                <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
+                                <buildArg>--no-fallback</buildArg>
+                                <buildArg>--enable-preview</buildArg>
+                                <buildArg>-Ob</buildArg>
+                                <buildArg>-g</buildArg>
+                            </buildArgs>
+                            <skipNativeTests>true</skipNativeTests>
+                            <mainClass>${main.class}</mainClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>native-static</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>0.9.28</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>compile-no-fork</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <buildArgs>
+                                <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
+                                <buildArg>--no-fallback</buildArg>
+                                <buildArg>--enable-preview</buildArg>
+                                <buildArg>--features=${graal.feature}</buildArg>
+                                <buildArg>-Ob</buildArg>
+                                <buildArg>-H:+ForeignAPISupport</buildArg>
+                                <buildArg>-g</buildArg>
+                                <buildArg>--static</buildArg>
+                                <buildArg>--libc=musl</buildArg>
+                            </buildArgs>
+                            <skipNativeTests>true</skipNativeTests>
+                            <mainClass>${main.class}</mainClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+
+    </profiles>
+    <dependencies>
+        <dependency>
+            <groupId>io.github.dreamlike</groupId>
+            <artifactId>leyden-compile-enhance</artifactId>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
@@ -25,7 +143,11 @@
                     <target>${java.version}</target>
                     <source>${java.version}</source>
                     <compilerArgs>
+                        <arg>--enable-preview</arg>
                     </compilerArgs>
+                    <annotationProcessors>
+                        <annotationProcessor>io.github.dreamlike.LeydenCompileProcessor</annotationProcessor>
+                    </annotationProcessors>
                 </configuration>
             </plugin>
 
